# src/main/java/com/webnobis/mastermind/service/handler/GameHandler.java
@@ -24,6 +24,9 @@ public class GameHandler implements Handler {
 			.map(TypedData::getText)
 			.map(xml -> createOrUpdate(xml))
 			.onError(IllegalArgumentException.class, e -> ctx.getResponse().status(Status.of(HttpResponseStatus.EXPECTATION_FAILED.code(), e.getMessage())))
+			.blockingOp(game -> ctx.getResponse()
+					.status(status)
+					.getHeaders().add("game-id", game.getId()))
 			.map(XmlGame::from)
 			.map(XmlGame::toString)
 			.onError(ctx::error)
